unpackaged/main/default/objects/fferpcore__ErpInternalEvent__e/fferpcore__ErpInternalEvent__e.object-meta.xml
<CustomObject>
    <description>Data used by internal operations in Foundations.</description>
    <label>FDN Internal Event</label>
    <pluralLabel>FDN Internal Events</pluralLabel>
</CustomObject>