unpackaged/main/default/objects/fferpcore__ErpInternalEvent__e/fields/fferpcore__CcMessageType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CcMessageType__c</fullName>
    <description>The destination message type to store the event message data. The message type must contain the "Logging." prefix.</description>
    <label>Copy to Message Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>