unpackaged/main/default/objects/fferpcore__ErpInternalEvent__e/fields/fferpcore__Component__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Component__c</fullName>
    <label>Component</label>
    <length>128</length>
    <type>Text</type>
</CustomField>