unpackaged/main/default/objects/fferpcore__ErpInternalEvent__e/fields/fferpcore__MessageData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageData__c</fullName>
    <label>Message Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>