unpackaged/main/default/objects/fferpcore__ErpInternalEvent__e/fields/fferpcore__Method__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Method__c</fullName>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>