unpackaged/main/default/objects/fferpcore__ErpInternalEvent__e/fields/fferpcore__Severity__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Severity__c</fullName>
    <label>Severity</label>
    <length>24</length>
    <type>Text</type>
</CustomField>