unpackaged/main/default/objects/fferpcore__ErpInternalEvent__e/fields/fferpcore__ShortMessage__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ShortMessage__c</fullName>
    <label>Short Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>